--- a/solutions/reverse_a_string/style.css
+++ b/solutions/reverse_a_string/style.css
@@ -1,9 +1,3 @@
-/* solutions styles */
-.temp-display {
-  margin-top: 1rem;
-  font-weight: bold;
-}
-
 #btn {
   display: block;
   font-size: 2rem;
@@ -12,4 +6,10 @@
   background-color: #acd157;
   border: 2px solid #00471b;
   border-radius: 0.5rem;
+}
+
+.display {
+  margin-top: 1rem;
+  font-weight: bold;
+  min-height: 3rem;
 }
